--- a/10-hashi-vault.yml
+++ b/10-hashi-vault.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: Print
       ansible.builtin.debug:
-        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=secret/test:demo token={{ vault_token }} url=http://vault.kommanuthala.store:8200') }}"
+        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=secret/test:demo token={{ vault_token }} url=http://vault-internal.kommanuthala.store:8200') }}"
