--- a/10-hashi-vault.yml
+++ b/10-hashi-vault.yml
@@ -1,7 +1,7 @@
 - name: Get secrects from vault
-  hosts: local
+  hosts: localhost
   connection: local
   tasks:
     - name: Print
       ansible.builtin.debug:
-        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=secret/test:demo token={{ vault_token }} url=http://vault-internal.kommanuthala.store:8200') }}"
+        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=test/demo:username token={{ vault_token }} url=http://vault-internal.kommanuthala.store:8200') }}"
