--- a/frontend.yml
+++ b/frontend.yml
@@ -2,7 +2,7 @@
   hosts: all
   tasks:
     - name: Disabled default nginx
-      ansible.builin.shell: dnf module disable nginx
+      ansible.builtin.shell: dnf module disable nginx
     
     - name: Install nginx 24
       ansible.builtin.shell: dnf module enable nginx:1.24 -y 
@@ -11,4 +11,3 @@
       ansible.builtin.dnf:
         name: nginx
         state: present
-        
