--- a/frontend.yml
+++ b/frontend.yml
@@ -1,5 +1,6 @@
 - name: Frontend setup
   hosts: all
+  become: true
   tasks:
     - name: Disabled default nginx
       ansible.builtin.shell: dnf module disable nginx
