--- a/frontend.yml
+++ b/frontend.yml
@@ -12,3 +12,8 @@
       ansible.builtin.dnf:
         name: nginx
         state: present
+
+    - name: start nginx
+      ansible.builtin.systemd:
+        name: nginx
+        state: started
