--- a/04-conditions.yml
+++ b/04-conditions.yml
@@ -5,9 +5,9 @@
     - name: x is greater than 10
       ansible.builtin.debug:
         msg: "x is greater than 10"
-      when: x > 10
+      when: x|int > 10
 
     - name: x is less than or equal to 10
       ansible.builtin.debug:
         msg: "x is less than or equal to 10"
-      when: x <= 10      
+      when: x|int <= 10      
