--- a/roles/06-ignore-errors.yml
+++ b/roles/06-ignore-errors.yml
@@ -5,7 +5,8 @@
   - name: shell 
     ansible.builtin.shell: cat /etc/passwd | grep omnandha
     register: result
-  
+    ignore_errors: yes
+
   - name: debug
     ansible.builtin.debug:
       msg: "Omnandha user is not there in system"
